# weather_app

./: README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml
src/: main.py
src/api/endpoints/: weather.py
src/application/: service.py
src/config/: dependencies.py  settings.py
src/domain/: dto_models.py  interfaces.py  sql_rep_interfaces.py
src/infra/: repositories.py  sql_repositories.py  weather_api_client.py
src/persistence/: models.py  session.py  uow.py
